.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0.1 - Unreleased
-------------------

- Successful completion of contact form ended in redirect to 'undefined'
  when using popups. Fixed by just closing.
  Fixes https://dev.plone.org/plone/ticket/11090
  [smcmahon]

- Fixed i18n of the Upgrade hellip button in plone-overview.pt.
  [vincentfretin]

- Fix a malformed list comprehension in failsafe_login_form.cpt
  [esteele]

- Modified plone.css.py script to correctly show contents for z3 style resources, by
  using portal_css.getInlineResource.
  This fixes http://dev.plone.org/plone/ticket/10864
  [mr_savage]

- Fixed https://dev.plone.org/plone/ticket/10956 - prevent content of the
  types listed in typesUseViewActionInListings from being selected as default
  pages.
  [elro]

- Validate new group names using the isMemberIdAllowed method of the
  registration tool. This fixes http://dev.plone.org/plone/ticket/10897.
  [davisagli]

4.0 - 2010-08-28
----------------

- Tag 4.0 final.
  [esteele]

4.0rc1 - 2010-08-05
-------------------

- Fixed http://dev.plone.org/plone/ticket/10790
  "popupforms.js causes javascript error on IE7"
  [smcmahon]

- Limit number of matches looked up during live search for speedier replies.
  [witsch]

- Use the standard libraries doctest module.
  [hannosch]

- Don't open content_status_history in a popup, it requires template specific
  JS and CSS to be loaded. This refs http://dev.plone.org/plone/ticket/10726.
  [hannosch]

- No longer mention `textile` as a supported markup style. We don't ship with
  the required Python packages by default. This closes
  http://dev.plone.org/plone/ticket/10690.
  [hannosch]

- Fix the table of contents generation script to include h1 tags from the
  content body. Fixes http://dev.plone.org/plone/ticket/10755
  [davisagli]
