@@ -39,41 +39,96 @@
                 </h1>
 
                 <div id="content-core">
-                    <p i18n:translate="description_site_error">
-                        We apologize for the inconvenience, but the page you were trying to access is not at this address.
+                    <p i18n:translate="description_site_error"> 
+ 	                    We apologize for the inconvenience, but the page you were trying to access is not at this address. 
                         You can use the links below to help you find what you are looking for.
+                     </p>
+
+                    <p i18n:translate="description_site_error_mail_site_admin">
+                        If you are certain you have the correct web address but are encountering an error, please
+                        contact the <span i18n:name="site_admin">
+                        <a href="#" 
+                           i18n:translate="label_site_admin"
+                           tal:attributes="href string:${context/portal_url}/contact-info">Site Administration</a></span>.
                     </p>
 
-                    <ul>
-                        <li i18n:translate="site_error_review">
-                            Review the address to make sure it is correct:
-                            <strong i18n:name="current_url"
-                                    tal:content="context/@@plone_context_state/current_page_url">current URL</strong>
-                        </li>
-                        <li i18n:translate="site_error_search">
-                            <a href="#" i18n:name="search_the_site" i18n:translate="label_search_the_site"
-                               tal:attributes="href string:${context/portal_url}/search">Search the site</a> for the page
-                            you were trying to access, as it may have moved
-                        </li>
-                        <li i18n:translate="description_site_error_mail_site_admin">
-                            If you are certain you have the correct web address but are encountering an error, please
-                            contact the <span i18n:name="site_admin">
-                            <a href="#" 
-                               i18n:translate="label_site_admin"
-                               tal:attributes="href string:${context/portal_url}/contact-info">Site Administration</a></span>.
-                        </li>
-                        <li i18n:translate="site_error_site_map">
-                            View the 
-                            <a href="#" i18n:name="site_map" i18n:translate="label_site_map"
-                               tal:attributes="href string:${context/portal_url}/sitemap">Site map</a>
-                        </li>
-                        <li i18n:translate="site_error_link_home">
-                            Go to the
-                            <a href="#" i18n:name="home_page" i18n:translate="label_home_page"
-                               tal:attributes="href context/portal_url">home page</a>
-                        </li>
-                    </ul>
+                    <p i18n:translate="description_site_error_thank_you">
+                    Thank you.
+                    </p>
+                
+                    <!-- Offer search results for suggestions -->
+                    <tal:suggestions define="first_parent redirection_view/find_first_parent;
+                                             similar_items redirection_view/search_for_similar;
+                                             plone_view context/@@plone;
+                                             site_properties context/portal_properties/site_properties;
+                                             use_view_action site_properties/typesUseViewActionInListings|python:();
+                                             desc_length site_properties/search_results_description_length;
+                                             desc_ellipsis site_properties/ellipsis;
+                                             normalizeString nocall:plone_view/normalizeString;"
+                                     condition="python:first_parent is not None or similar_items">
                     
+                        <h3 i18n:translate="heading_not_found_suggestions">You might have been looking for&hellip;</h3>
+                    
+                        <dl>
+                    
+                        <tal:firstparent condition="first_parent/absolute_url | nothing">
+                            <tal:entry define="result_url first_parent/absolute_url;
+                                               result_type python:hasattr(first_parent, 'getTypeInfo') and first_parent.getTypeInfo().getId();
+                                               item_icon python:plone_view.getIcon(first_parent);
+                                               url python:test(result_type in use_view_action, result_url+'/view', result_url+'/');"
+                                       tal:condition="result_type">
+                                <dt tal:define="item_wf_state_class python:'state-' + context.portal_workflow.getInfoFor(first_parent, 'review_state', '');"
+                                    tal:attributes="class python:'contenttype-' + normalizeString(result_type)">
+                                  <img tal:replace="structure item_icon/html_tag" />
+                                   <a
+                                     href="#" 
+                                     tal:attributes="href url;
+                                                     class string:$item_wf_state_class"
+                                     tal:content="first_parent/Title" />
+                               
+                                    <span class="discreet" i18n:translate="results_by_author"
+                                      tal:condition="python: not isAnon or site_properties.allowAnonymousViewAbout">
+                                    by <span tal:omit-tag="" tal:content="first_parent/Creator" i18n:name="author">Author</span>,
+                                    <span tal:omit-tag="" tal:content="python:toLocalizedTime(first_parent.ModificationDate(), long_format=1)" i18n:name="date">Modification Date</span>
+                                    </span>
+
+                                </dt>
+            
+                                <dd tal:content="python:plone_view.cropText(first_parent.Description(), desc_length, desc_ellipsis)"> Description </dd>
+
+                            </tal:entry>
+                        </tal:firstparent>
+                    
+                        <tal:similar repeat="similar similar_items">
+                            <tal:entry define="result_url similar/getURL;
+                                               result_type similar/portal_type;
+                                               item_icon python:plone_view.getIcon(similar);
+                                               url python:test(result_type in use_view_action, result_url+'/view', result_url+'/');">
+                                <dt tal:define="item_wf_state_class string:state-${similar/review_state};"
+                                    tal:attributes="class python:'contenttype-' + normalizeString(result_type)">
+                                  <img tal:replace="structure item_icon/html_tag" />
+                                   <a
+                                     href="#" 
+                                     tal:attributes="href url;
+                                                     class string:$item_wf_state_class"
+                                     tal:content="similar/pretty_title_or_id" />
+                               
+                                    <span class="discreet" i18n:translate="results_by_author"
+                                      tal:condition="python: not isAnon or site_properties.allowAnonymousViewAbout">
+                                    by <span tal:omit-tag="" tal:content="similar/Creator" i18n:name="author">Author</span>,
+                                    <span tal:omit-tag="" tal:content="python:toLocalizedTime(similar.ModificationDate, long_format=1)" i18n:name="date">Modification Date</span>
+                                    </span>
+
+                                </dt>
+            
+                                <dd tal:content="python:plone_view.cropText(similar.Description or '', desc_length, desc_ellipsis)"> Description </dd>
+
+                            </tal:entry>
+                        </tal:similar>
+                        
+                        </dl>
+                    
+                    </tal:suggestions>
                 </div>
             </tal:redirect>
 
