@@ -8,6 +8,13 @@ Changelog
 4.0.1 - Unreleased
 -------------------
 
+- Re-add suggestions for 404 pages that were missing in 4.0.
+  [MatthewWilkes]
+
+- Block picking a username already in use by a parent PAS to prevent potential
+  security issues due to collisions.
+  [MatthewWilkes]
+
 - Successful completion of contact form ended in redirect to 'undefined'
   when using popups. Fixed by just closing.
   Fixes https://dev.plone.org/plone/ticket/11090
